--- a/admin.html
+++ b/admin.html
@@ -183,8 +183,7 @@
   </div>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.8.0/dist/supabase.min.js"></script>
 <script>
-  const supabase = createClient('https://ajuzonfhftbknlmzqygw.supabase.co', 'velhasvirgens');
-
+  const supabase = window.supabase.createClient('https://ajuzonfhftbknlmzqygw.supabase.co', 'velhasvirgens');
   let categorias = [];
   let produtos = [];
   let header = {};
