--- a/admin.html
+++ b/admin.html
@@ -182,9 +182,9 @@
     </div>
   </div>
 <script src="https://unpkg.com/@supabase/supabase-js@2.8.0/dist/umd/supabase.min.js"></script>
-
 <script>
-  const supabase = supabase.createClient('https://ajuzonfhftbknlmzqygw.supabase.co', 'velhasvirgens');
+  const supabase = createClient('https://ajuzonfhftbknlmzqygw.supabase.co', 'velhasvirgens');
+
   let categorias = [];
   let produtos = [];
   let header = {};
