--- a/admin.html
+++ b/admin.html
@@ -185,7 +185,8 @@
 <script>
   const supabaseUrl = 'https://ajuzonfhftbknlmzqygw.supabase.co';
   const supabaseKey = 'velhasvirgens';
-  const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
+  const supabase = window.supabase.createClient('https://ajuzonfhftbknlmzqygw.supabase.co', 'velhasvirgens');
+
 
   let categorias = [];
   let produtos = [];
