--- a/admin.html
+++ b/admin.html
@@ -182,156 +182,181 @@
     </div>
   </div>
 <script src="https://unpkg.com/@supabase/supabase-js@2.8.0/dist/umd/supabase.min.js"></script>
+
 <script>
-  const supabaseUrl = 'https://ajuzonfhftbknlmzqygw.supabase.co';
-  const supabaseKey = 'velhasvirgens';
-  const supabase = window.supabase.createClient('https://ajuzonfhftbknlmzqygw.supabase.co', 'velhasvirgens');
+  window.onload = () => {
+    // Criando o cliente do Supabase
+    const supabase = window.supabase.createClient(
+      'https://ajuzonfhftbknlmzqygw.supabase.co',
+      'velhasvirgens'
+    );
 
+    let categorias = [];
+    let produtos = [];
+    let header = {};
+    let textoBotao = 'Meu Pedido';
 
-  let categorias = [];
-  let produtos = [];
-  let header = {};
-  let textoBotao = 'Meu Pedido';
+    // Função para carregar os dados do banco
+    async function carregarDados() {
+      const { data, error } = await supabase
+        .from('cardapio')
+        .select()
+        .eq('id', 1)
+        .single();
 
-  async function carregarDados() {
-    const { data, error } = await supabase
-      .from('cardapio')
-      .select()
-      .eq('id', 1)
-      .single();
+      if (error) {
+        console.error('Erro ao carregar dados:', error.message);
+        alert('Erro ao carregar os dados. Tente novamente mais tarde.');
+        return;
+      }
 
-    if (error) {
-      console.error('Erro ao carregar dados:', error.message);
-      alert('Erro ao carregar os dados. Tente novamente mais tarde.');
-      return;
-    }
+      categorias = data.categorias || [];
+      produtos = data.produtos || [];
+      header = data.header || {};
+      textoBotao = data.textoBotao || 'Meu Pedido';
 
-    categorias = data.categorias || [];
-    produtos = data.produtos || [];
-    header = data.header || {};
-    textoBotao = data.textoBotao || 'Meu Pedido';
+      document.getElementById('inputNomeEsfiharia').value = header.nome || '';
+      document.getElementById('inputImagemHeader').value = header.imagem || '';
+      document.getElementById('inputTextoBotao').value = textoBotao;
 
-    document.getElementById('inputNomeEsfiharia').value = header.nome || '';
-    document.getElementById('inputImagemHeader').value = header.imagem || '';
-    document.getElementById('inputTextoBotao').value = textoBotao;
-
-    atualizarCategorias();
-    atualizarProdutos();
-  }
-
-  function atualizarCategorias() {
-    const lista = document.getElementById('listaCategorias');
-    const select = document.getElementById('selectCategoriaProduto');
-    lista.innerHTML = '';
-    select.innerHTML = '<option value="">Selecione uma categoria</option>';
-    categorias.forEach((cat, i) => {
-      const div = document.createElement('div');
-      div.className = 'item';
-      div.innerHTML = `
-        <div>${cat}</div>
-        <div class="item-buttons">
-          <button class="btn remove" onclick="removerCategoria(${i})">Remover</button>
-        </div>`;
-      lista.appendChild(div);
-
-      const option = document.createElement('option');
-      option.value = cat;
-      option.textContent = cat;
-      select.appendChild(option);
-    });
-  }
-
-  function atualizarProdutos() {
-    const tbody = document.getElementById('listaProdutos');
-    tbody.innerHTML = '';
-    produtos.forEach((p, i) => {
-      const tr = document.createElement('tr');
-      tr.innerHTML = `
-        <td>${p.nome}</td>
-        <td>R$ ${parseFloat(p.preco).toFixed(2)}</td>
-        <td>${p.categoria}</td>
-        <td>
-          <button class="btn edit" onclick="editarProduto(${i})">Editar</button>
-          <button class="btn remove" onclick="removerProduto(${i})">Remover</button>
-        </td>`;
-      tbody.appendChild(tr);
-    });
-  }
-
-  async function salvarDados() {
-    const { error } = await supabase
-      .from('cardapio')
-      .upsert([{ id: 1, categorias, produtos, header, textoBotao }]);
-
-    if (error) {
-      console.error('Erro ao salvar dados:', error.message);
-      alert('Erro ao salvar os dados. Tente novamente mais tarde.');
-    } else {
-      alert('Alterações salvas com sucesso!');
-    }
-  }
-
-  function adicionarCategoria() {
-    const input = document.getElementById('inputCategoria');
-    const valor = input.value.trim();
-    if (valor && !categorias.includes(valor)) {
-      categorias.push(valor);
-      input.value = '';
       atualizarCategorias();
-      salvarDados();
+      atualizarProdutos();
     }
-  }
 
-  function removerCategoria(i) {
-    const categoriaRemovida = categorias[i];
-    categorias.splice(i, 1);
-    produtos = produtos.filter(p => p.categoria !== categoriaRemovida);
-    atualizarCategorias();
-    atualizarProdutos();
-    salvarDados();
-  }
+    // Função para atualizar a lista de categorias no frontend
+    function atualizarCategorias() {
+      const lista = document.getElementById('listaCategorias');
+      const select = document.getElementById('selectCategoriaProduto');
+      lista.innerHTML = '';
+      select.innerHTML = '<option value="">Selecione uma categoria</option>';
+      categorias.forEach((cat, i) => {
+        const div = document.createElement('div');
+        div.className = 'item';
+        div.innerHTML = `
+          <div>${cat}</div>
+          <div class="item-buttons">
+            <button class="btn remove" onclick="removerCategoria(${i})">Remover</button>
+          </div>`;
+        lista.appendChild(div);
 
-  function adicionarProduto() {
-    const nome = document.getElementById('inputProduto').value.trim();
-    const preco = document.getElementById('inputPreco').value.trim();
-    const categoria = document.getElementById('selectCategoriaProduto').value;
-    if (nome && preco && categoria) {
-      produtos.push({ nome, preco, categoria });
-      document.getElementById('inputProduto').value = '';
-      document.getElementById('inputPreco').value = '';
+        const option = document.createElement('option');
+        option.value = cat;
+        option.textContent = cat;
+        select.appendChild(option);
+      });
+    }
+
+    // Função para atualizar a lista de produtos no frontend
+    function atualizarProdutos() {
+      const tbody = document.getElementById('listaProdutos');
+      tbody.innerHTML = '';
+      produtos.forEach((p, i) => {
+        const tr = document.createElement('tr');
+        tr.innerHTML = `
+          <td>${p.nome}</td>
+          <td>R$ ${parseFloat(p.preco).toFixed(2)}</td>
+          <td>${p.categoria}</td>
+          <td>
+            <button class="btn edit" onclick="editarProduto(${i})">Editar</button>
+            <button class="btn remove" onclick="removerProduto(${i})">Remover</button>
+          </td>`;
+        tbody.appendChild(tr);
+      });
+    }
+
+    // Função para salvar dados no banco de dados
+    async function salvarDados() {
+      const { error } = await supabase
+        .from('cardapio')
+        .upsert([{ id: 1, categorias, produtos, header, textoBotao }]);
+
+      if (error) {
+        console.error('Erro ao salvar dados:', error.message);
+        alert('Erro ao salvar os dados. Tente novamente mais tarde.');
+      } else {
+        alert('Alterações salvas com sucesso!');
+      }
+    }
+
+    // Função para adicionar uma nova categoria
+    function adicionarCategoria() {
+      const input = document.getElementById('inputCategoria');
+      const valor = input.value.trim();
+      if (valor && !categorias.includes(valor)) {
+        categorias.push(valor);
+        input.value = '';
+        atualizarCategorias();
+        salvarDados();
+      }
+    }
+
+    // Função para remover uma categoria
+    function removerCategoria(i) {
+      const categoriaRemovida = categorias[i];
+      categorias.splice(i, 1);
+      produtos = produtos.filter(p => p.categoria !== categoriaRemovida);
+      atualizarCategorias();
       atualizarProdutos();
       salvarDados();
     }
-  }
 
-  function removerProduto(i) {
-    produtos.splice(i, 1);
-    atualizarProdutos();
-    salvarDados();
-  }
+    // Função para adicionar um novo produto
+    function adicionarProduto() {
+      const nome = document.getElementById('inputProduto').value.trim();
+      const preco = document.getElementById('inputPreco').value.trim();
+      const categoria = document.getElementById('selectCategoriaProduto').value;
+      if (nome && preco && categoria) {
+        produtos.push({ nome, preco, categoria });
+        document.getElementById('inputProduto').value = '';
+        document.getElementById('inputPreco').value = '';
+        atualizarProdutos();
+        salvarDados();
+      }
+    }
 
-  function editarProduto(i) {
-    const p = produtos[i];
-    document.getElementById('inputProduto').value = p.nome;
-    document.getElementById('inputPreco').value = p.preco;
-    document.getElementById('selectCategoriaProduto').value = p.categoria;
-    removerProduto(i);
-  }
+    // Função para remover um produto
+    function removerProduto(i) {
+      produtos.splice(i, 1);
+      atualizarProdutos();
+      salvarDados();
+    }
 
-  function salvarHeader() {
-    header.nome = document.getElementById('inputNomeEsfiharia').value.trim();
-    header.imagem = document.getElementById('inputImagemHeader').value.trim();
-    salvarDados();
-  }
+    // Função para editar um produto
+    function editarProduto(i) {
+      const p = produtos[i];
+      document.getElementById('inputProduto').value = p.nome;
+      document.getElementById('inputPreco').value = p.preco;
+      document.getElementById('selectCategoriaProduto').value = p.categoria;
+      removerProduto(i);
+    }
 
-  function salvarTextoBotao() {
-    textoBotao = document.getElementById('inputTextoBotao').value.trim();
-    salvarDados();
-  }
+    // Função para salvar as informações de header
+    function salvarHeader() {
+      header.nome = document.getElementById('inputNomeEsfiharia').value.trim();
+      header.imagem = document.getElementById('inputImagemHeader').value.trim();
+      salvarDados();
+    }
 
-  // Carregar os dados assim que a página for carregada
-  carregarDados();
+    // Função para salvar o texto do botão
+    function salvarTextoBotao() {
+      textoBotao = document.getElementById('inputTextoBotao').value.trim();
+      salvarDados();
+    }
+
+    // Torna as funções globais para funcionar com onclick no HTML
+    window.adicionarCategoria = adicionarCategoria;
+    window.removerCategoria = removerCategoria;
+    window.adicionarProduto = adicionarProduto;
+    window.removerProduto = removerProduto;
+    window.editarProduto = editarProduto;
+    window.salvarHeader = salvarHeader;
+    window.salvarTextoBotao = salvarTextoBotao;
+
+    // Carregar os dados assim que a página for carregada
+    carregarDados();
+  };
 </script>
+
 
 
 </body>
