--- a/admin.html
+++ b/admin.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Administração Esfiharia Delivery</title>
   <link rel="stylesheet" href="style.css">
+  <!-- Link para o script da biblioteca Supabase no head -->
+  <script src="https://unpkg.com/@supabase/supabase-js@2.8.0/dist/umd/supabase.min.js"></script>
   <style>
     /* Estilos que você já tinha, você pode manter sem alterações */
     body {
@@ -181,8 +183,6 @@
       <button class="btn" onclick="salvarTextoBotao()">Salvar Texto</button>
     </div>
   </div>
-<script src="https://unpkg.com/@supabase/supabase-js@2.8.0/dist/umd/supabase.min.js"></script>
-<script src="https://unpkg.com/@supabase/supabase-js@2.8.0/dist/umd/supabase.min.js"></script>
 
 <script>
   window.onload = () => {
