--- a/admin.html
+++ b/admin.html
@@ -6,7 +6,7 @@
   <title>Administração Esfiharia Delivery</title>
   <link rel="stylesheet" href="style.css">
   <!-- Link para o script da biblioteca Supabase no head -->
-  <script src="https://unpkg.com/@supabase/supabase-js@2.8.0/dist/umd/supabase.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.9.0/dist/umd/supabase.min.js"></script>
   <style>
     /* Estilos que você já tinha, você pode manter sem alterações */
     body {
