--- a/admin.html
+++ b/admin.html
@@ -195,7 +195,7 @@
     // Agora podemos inicializar o cliente Supabase
     const supabase = window.supabase.createClient(
       'https://ajuzonfhftbknlmzqygw.supabase.co',
-      'velhasvirgens'
+      'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImFqdXpvbmZoZnRia25sbXpxeWd3Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDU0MzgwNzYsImV4cCI6MjA2MTAxNDA3Nn0.E_DiHTcVkcafm4tgQfm1bvCYwNEPHb6kxDHpuKqki2w'
     );
 
     let categorias = [];
